<resources>
    <string name="app_name">AllMyPays</string>
    <string name="user_login">Please, enter your credentials</string>
    <string name="hint_user_email">Enter eMail</string>
    <string name="hint_password">Enter Password</string>
    <string name="error_password">Password must contain at least 8 characters.</string>
    <string name="create_account">Create an account</string>
    <string name="hint_enter_user_name">Enter User Name</string>
    <string name="hint_enter_email">Enter eMail</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="hint_enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="show_users">Show users</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="gender">Gender:</string>
    <string name="register">Registro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Iniciar sesión</string>
    <string name="correo">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="bienvenido">Bienvenido a All My Pay$</string>
    <string name="crear">Crear recordatorio</string>
    <string name="siguiente">Siguiente</string>
    <string name="formato_fecha">dd/mm/yyyy</string>
    <string name="formato_hora">hh:mm</string>
    <string name="cambiar">Cambiar</string>
    <string name="mis_recordatorio">Mis recordatorio</string>
    <string name="nombre_recordatorio">Nombre recordatorio</string>
    <string name="editar">EDITAR</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="eliminar">ELIMINAR</string>
    <string name="editar_recordatorio">Editar recordatorio</string>
    <string name="registro">Registro</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="urgente">Urgente</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="nombre_completo">Nombre completo</string>
</resources>