<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ui.fragments.PerfilFragment"
    app:navGraph="@navigation/nav_graph"
    app:defaultNavHost="true"
    >

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="428dp"
        android:layout_height="524dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-11dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="left"
            android:layout_marginStart="42dp"
            android:layout_marginTop="90dp"
            android:layout_marginEnd="42dp"
            android:gravity="left"
            android:text="@string/mi_perfil"
            android:textStyle="bold"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimary"
            android:textSize="40dp"
            tools:ignore="RtlCompat" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="362dp"
        android:layout_height="502dp"
        android:layout_marginTop="92dp"
        android:background="@drawable/button_rounded_border"
        android:backgroundTint="@color/white"
        android:elevation="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="20dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtINamePerfil"
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_border"
                android:ems="10"
                android:hint="@string/nombre_completo"
                android:inputType="text"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtIEmailPerfil"
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_border"
                android:ems="10"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_gravity="center"
            android:layout_marginStart="21dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="22dp"
            android:textStyle="bold"
            android:text="@string/cambiar_contrase_a"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtIpassword"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_border"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password"
            android:layout_marginTop="15dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:textColorHint="@color/colorPrimaryDark"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtIpasswordCPerfil"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_rounded_border"
                android:ems="10"
                android:hint="Confirmar contraseña"
                android:inputType="textPassword"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmar"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirm_password"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="54dp"
            android:background="@drawable/button_rounded"
            android:fontFamily="@font/my_font"
            android:gravity="center"
            android:letterSpacing="0"
            android:text="@string/confirmar"
            android:textColor="@color/colorPrimaryDark"
            android:textFontWeight="900"
            android:textSize="25sp"
            app:backgroundTint="@color/colorAccent" />

        <Button
            android:id="@+id/Cancelar"
            android:layout_width="255dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/confirmar"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="false"
            android:layout_alignParentBottom="false"
            android:layout_marginStart="54dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rojo"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/my_font"
            android:gravity="center"
            android:letterSpacing="0"
            android:text="@string/cancelar"
            android:textColor="@color/error_red"
            android:textFontWeight="900"
            android:textSize="25sp"
            app:backgroundTintMode="screen" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>